# esp32-lvgl-playground

./: .gitmodules  CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  app_main.cpp
main/common/: logging.hpp  macros.hpp  scope_guard.hpp
main/device/: oled_ssd1309.hpp
main/ui/: encoder_button_input.cpp  encoder_button_input.hpp  style.hpp
main/ui/view/: common.hpp  root.hpp
main/ui/widgets/: lv_spinhex.c  lv_spinhex.h
